<resources>
    <string name="app_name">AppDoacoes</string>
    <string name="telefone_opcional">Digite o seu telefone</string>
    <string name="salvar">Salvar</string>
    <string name="email">Digite seu e-mail</string>
    <string name="nome_obrigat_rio">Digite seu nome</string>
    <string name="coloque_suas_informa_es_no_campos_abaixo">Coloque suas informações no campos abaixo:</string>
    <string name="cadastro">Cadastro</string>
    <string name="conecte_doadores_e_institui_es_de_caridade">Conecte doadores e instituições de caridade.</string>
    <string name="bem_vindo_ao_appdoa_es">Bem-vindo ao AppDoações!</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="login">Login</string>
    <string name="sou_doador">Sou Doador</string>
    <string name="sou_institui_o">Sou Instituição</string>
    <string name="bem_vindo_institui_o">Bem-vindo, Instituição!</string>
    <string name="ver_necessidades">Ver Necessidades</string>
    <string name="publicar_necessidade">Publicar Necessidade</string>
    <string name="title_menu_doador">Menu Doador</string>
    <string name="title_menu_instituicao">Menu Instituição</string>
    <string name="title_lista_necessidades">Necessidades</string>
    <string name="title_publicar_necessidade">Publicar Necessidade</string>
    <string name="nome_do_respons_vel">Nome do Responsável*</string>
    <string name="email_do_respons_vel">Email do Responsável*</string>
    <string name="nome_da_institui_o">Nome da Instituição*</string>
    <string name="descri_o_da_institui_o">Descrição da Instituição</string>
    <string name="telefone_da_institui_o">Telefone da Instituição*</string>
    <string name="cadastrar_institui_o">Cadastrar Instituição</string>
    <string name="senha">Senha*</string>
    <string name="adicionar">Adicionar</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="in_cio">Início</string>
    <string name="title_menu">Menu Principal</string>
    <string name="title_realizar_doacao">Realizar Doação</string>
    <string name="necessidade_publicada_sucesso">Necessidade publicada com sucesso!</string>
    <string name="doacao_realizada_sucesso">Doação realizada com sucesso!</string>
    <string name="erro_operacao">Erro ao realizar operação</string>
    <string name="carregando">Carregando...</string>
    <string name="nenhuma_necessidade">Nenhuma necessidade encontrada</string>
    <string name="selecione_necessidade">Selecione uma necessidade</string>
    <string name="quantidade">Quantidade</string>
    <string name="observacoes">Observações (opcional)</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nenhuma_doa_o_foi_registrada">Nenhuma doação foi registrada</string>
    <string name="hist_rico_de_doa_es">Histórico de Doações</string>
    <string name="hist_rico_de_doa_es_recebidas">Histórico de doações recebidas</string>
    <string name="lista_de_doa_es_recebidas">Lista de doações recebidas</string>
    <string name="nenhuma_doa_o_foi_registrada_ainda">Nenhuma doação foi registrada ainda</string>
    <string name="tipo_colon">Tipo: </string>
    <string name="quantidade_colon">Quantidade: </string>
    <string name="data_colon">Data: </string>
    <string name="doador_colon">Doador: </string>
</resources>