<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        android:padding="12dp"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonEntrarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/buttonCadastrarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_se"
        android:layout_marginTop="16dp"/>
</LinearLayout>