<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/textCadastreAqui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coloque_suas_informa_es_no_campos_abaixo"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_obrigat_rio"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:autofillHints="name"
        android:minHeight="48dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone_opcional"
        android:inputType="phone"
        android:textColor="#000000"
        android:autofillHints="phone"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_marginTop="24dp" />

</LinearLayout>
