<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewBoasVindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo_institui_o"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/conecte_doadores_e_institui_es_de_caridade"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonVerNecessidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_necessidades"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonPublicarNecessidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicar_necessidade"/>
</LinearLayout>